--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "vtex.store-components": "3.x"
-  }
+  },
     "vtex.store": "2.x",
     "vtex.store-header": "2.x",
     "vtex.product-summary": "2.x",
@@ -43,7 +43,6 @@
     "vtex.responsive-layout": "0.x",
     "vtex.slider-layout": "0.x",
     "vtex.iframe": "0.x",
-    "vtex.breadcrumb": "1.x"
-  },
-  "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
+    "vtex.breadcrumb": "1.x",
+    "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
