--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,10 +1,16 @@
 {
   "store.home": {
     "blocks": [
-      "Shining chrome",
-      "info-card#button-right",
+      "rich-text",
+      "info-card#button-rignt",
       "info-card#button-left"
     ]
+  },
+  "rich-text": {
+    "props": {
+      "text": "*Hello, World!*",
+      "textPosition": "RIGHT"
+    }
   },
   "info-card#button-right": {
     "props": {
@@ -22,15 +28,14 @@
   "info-card#button-left": {
     "props": {
       "isFullModeStyle": false,
-      "textPosition": "left",
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "headline": "Shining chrome",
-      "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-      "callToActionMode": "button",
+      "callToActionMode": "link",
       "callToActionText": "Go to Collection",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
+      "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
       "callToActionUrl": "/sale/d",
       "blockClass": "info-card",
-      "textAlignment": "center"
+      "textAlignment": "left"
     }
   }
 }
