--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -28,6 +28,7 @@
   "info-card#button-left": {
     "props": {
       "isFullModeStyle": false,
+      "textPosition": "left",
       "headline": "Shining chrome",
       "callToActionMode": "link",
       "callToActionText": "Go to Collection",
