--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -36,7 +36,7 @@
       "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
       "callToActionUrl": "/sale/d",
       "blockClass": "info-card",
-      "textAlignment": "left"
+      "textAlignment": "center"
     }
   }
 }
