Exclusão home button-right

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,8 +1,7 @@
 {
   "store.home": {
     "blocks": [
-      "rich-text",
-      "info-card#button-rignt"
+      "rich-text"
     ]
   },
   "rich-text": {
