--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,9 +1,12 @@
 {
   "store.home": {
     "blocks": [
-      "rich-text"
+      "rich-text",
+      "info-card#button-right",
+      "info-card#button-left"
     ]
   },
+
   "rich-text": {
     "props": {
       "text": "*Hello, World!*",
