--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -4,16 +4,50 @@
       "rich-text",
       "info-card#button-right",
       "info-card#button-left",
-      "flex-layout.row"
+      "flex-layout.row",
+      "shelf"
     ]
   },
 
-  "rich-text": {
+  "flex-layout.row": {
+    "children": [
+      "info-card#rethink", 
+      "flex-layout.col"
+    ]
+  },
+
+  "flex-layout.col": {
+    "children": [
+      "image#eletronics", 
+      "image#major-appliance"
+    ]
+  },
+  
+  "info-card#rethink": {
     "props": {
-      "text": "*Hello, World!*",
-      "textPosition": "RIGHT"
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
+      "isFullModeStyle": true,
+      "headline": "Time to rethink your kitchen",
+      "callToActionText": "Discover",
+      "textPosition": "center"
     }
   },
+
+  "image#eletronics": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
+      "maxWidth": "100%",
+      "blockClass": "eletronics"
+    }
+  },
+  "image#major-appliance": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
+      "maxWidth": "100%",
+      "blockClass": "major appliance"
+    }
+  },
+
   "info-card#button-right": {
     "props": {
       "isFullModeStyle": false,
@@ -40,44 +74,7 @@
       "callToActionUrl": "/sale/d",
       "blockClass": "info-card",
       "textAlignment": "center"
-    
-    }
-  },
-  "flex-layout.row": {
-    "children": [
-      "info-card#rethink", 
-      "flex-layout.col"
-    ]
-  },
-
-  "info-card#rethink": {
-    "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
-      "isFullModeStyle": true,
-      "headline": "Time to rethink your kitchen",
-      "callToActionText": "Discover",
-      "textPosition": "center"
-    }
-  },
-
-  "flex-layout.col": {
-    "children": [
-      "image#eletronics", 
-      "image#major-appliance"
-    ]
-  },
-
-  "image#eletronics": {
-    "props": {
-      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
-      "maxWidth": "100%"
-    }
-  },
-
-  "image#major-appliance": {
-    "props": {
-      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
-      "maxWidth": "100%"
     }
   }
+ 
 }
