Correção erros escrita

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -18,7 +18,7 @@
 
   "flex-layout.col": {
     "children": [
-      "image#eletronics", 
+      "image#electronics", 
       "image#major-appliance"
     ]
   },
@@ -37,7 +37,7 @@
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
       "maxWidth": "100%",
-      "blockClass": "eletronics"
+      "blockClass": "electronics"
     }
   },
   "image#major-appliance": {
@@ -76,5 +76,4 @@
       "textAlignment": "center"
     }
   }
- 
 }
