--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -4,8 +4,9 @@
       "rich-text",
       "info-card#button-right",
       "info-card#button-left",
-      "flex-layout.row"
-      ]
+      "flex-layout.row",
+      "shelf"
+    ]
   },
 
   "flex-layout.row": {
