--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -78,31 +78,11 @@
     }
   },
   "responsive-layout.desktop#desktop": {
-    "children": ["rich-text#desktop"],
-    "image#desktop": {
-      "props": {
-        "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
-        "link": {
-          "url": "/small-appliances/coffee-makers"
-        } ,
-        "alt": "Coffee Makers Collection",
-        "maxWidth":"100%"
-      }
-    }    
+    "children": ["rich-text#desktop", "image#desktop"]  
   },
   
   "responsive-layout.mobile#mobile": {
-    "children": ["rich-text#mobile"],
-    "image#mobile": {
-      "props": {
-        "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
-        "link": {
-          "url": "/small-appliances/coffee-makers"
-        } ,
-        "alt": "Coffee Makers Collection",
-        "maxWidth":"100%"
-      }
-    }
+    "children": ["rich-text#mobile", "image#mobile"]    
   },
   
   "rich-text#desktop": {
@@ -119,5 +99,25 @@
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
-  }
+  },
+  "image#desktop": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
+      "link": {
+        "url": "/small-appliances/coffee-makers"
+      } ,
+      "alt": "Coffee Makers Collection",
+      "maxWidth":"100%"
+    }
+  },
+  "image#mobile": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
+      "link": {
+        "url": "/small-appliances/coffee-makers"
+      } ,
+      "alt": "Coffee Makers Collection",
+      "maxWidth":"100%"
+    }
+  }    
 }
