--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -19,16 +19,16 @@
       ]
     },
     "flex-layout.col#right": {
-      "props": {
-        "preventVerticalStretch": true,
-        "verticalAlign": true
-      },
       "children": [
         "product-images",
         "product-name", 
         "product-price",  
         "buy-button"
-      ]
+      ],
+      "props": {
+        "verticalAlign": true,
+        "preventVerticalStretch": true        
+      }      
     },
     "product-price": {
       "props": {
