--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -3,37 +3,36 @@
       "children": [
         "flex-layout.row#main"
       ]
+  },
+  "flex-layout.row#main": { 
+    "props": { 
+      "marginTop": 6
     },
-    "flex-layout.row#main": { 
-      "props": { 
-        "marginTop": 6
-      },
-      "children": [
-        "flex-layout.col#left",
-        "flex-layout.col#right"
-      ]
-    },
-    "flex-layout.col#left": {
-      "children": [
-        "product-images"
-      ]
-    },
-    "flex-layout.col#right": {
-      "children": [
-        "product-images",
-        "product-name", 
-        "product-price",  
-        "buy-button"
-      ],
-      "props": {
-        "verticalAlign": true,
-        "preventVerticalStretch": true        
-      }      
-    },
-    "product-price": {
-      "props": {
-        "showSavings": true,
-        "showListPrice": true
-      }
+    "children": [
+      "flex-layout.col#left",
+      "flex-layout.col#right"
+    ]
+  },
+  "flex-layout.col#left": {
+    "children": [
+      "product-images"
+    ]
+  },
+  "flex-layout.col#right": {
+    "children": [      
+      "product-name", 
+      "product-price",  
+      "buy-button"
+    ],
+    "props": {
+      "verticalAlign": true,
+      "preventVerticalStretch": true        
+    }      
+  },
+
+  "product-price": {
+    "props": {
+      "showSavings": true,
+      "showListPrice": true    }
     }  
   }
