--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,7 +1,9 @@
 {
   "store.product": {
       "children": [
-        "flex-layout.row#main"
+        "breadcrumb",
+        "flex-layout.row#main",
+        "product-price"
       ]
   },
   "flex-layout.row#main": { 
@@ -25,9 +27,18 @@
     },
     "children": [      
       "product-name", 
+      "product-identifier.product",
       "product-price",  
+      "flex-layout.row#qty-sku",  
       "buy-button"
     ]      
+  },
+  "flex-layout.row#qty-sku": {
+    "children": [
+      "sku-selector",
+      "shipping-simulator",
+      "product-quantity"
+    ]
   },
 
   "product-price": {
