--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "postreleasy": "vtex publish --verbose"
   },
   "dependencies": {
-    "vtex.store-components": "3.x"
+    "vtex.store-components": "3.x",
+    "vtex.product-summary": "2.x"
   },
   "vtex.store": "2.x",
   "vtex.store-header": "2.x",
