ajuste 3 shelf.relatedProducts e sku-selector

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -23,7 +23,9 @@
   },
   "sku-selector": {
     "props": {
-      "showValueForVariation": "image"
+      "initialSelection": "empty",
+      "showValueForVariation": "image",
+      "showVariationsErrorMessage": true 
     }
   },
   "shelf.relatedProducts": {
