--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -1,25 +1,49 @@
- {
-  "store.search": {
-     "blocks": ["search-result-layout"]
-  },
-  "search-result-layout": {
-     "blocks": [
-        "search-result-layout.desktop",
-        "search-result-layout.mobile",
-        "search-not-found-layout"
-     ]
-  },
-  "search-result-layout.desktop": {
-    "children":[
-      "breadcrumb.search",
-      "search-title.v2",
-      "total-products.v2",
-      "order-by.v2",
-      "search-fetch-previous",
-      "search-content",
-      "filter-navigator.v3",
-      "search-fetch-more"
-    ]
-  }
- }
- 
+{
+   "store.search": {
+      "blocks": [
+         "search-result-layout"
+      ]
+   },
+   "search-result-layout": {
+      "blocks": [
+         "search-result-layout.desktop",
+         "search-result-layout.mobile",
+         "search-not-found-layout"
+      ]
+   },
+   "search-content": {
+      "blocks": ["gallery", "not-found"]
+   },
+   "gallery": {
+      "blocks": ["product-summary.shelf"]
+   },
+   "search-result-layout.desktop": {
+      "children": [
+         "breadcrumb.search",
+         "search-title.v2",
+         "flex-layout.row#top",
+         "search-fetch-previous",
+         "flex-layout.row#results",
+         "search-fetch-more"
+      ]
+   },
+   "flex-layout.row#results": {
+      "children": [
+         "flex-layout.col#filter",
+         "flex-layout.col#search",
+         "filter-navigator.v3",
+         "search-content"
+      ]
+   },
+   "flex-layout.col#filter": {
+      "props": {
+         "width": "20%"
+      }
+   },
+   "flex-layout.row#top": {
+      "children": [
+         "total-products.v2",
+         "order-by.v2"
+      ]
+   }
+}
