--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -30,15 +30,21 @@
    "flex-layout.row#results": {
       "children": [
          "flex-layout.col#filter",
-         "flex-layout.col#search",
-         "filter-navigator.v3",
-         "search-content"
+         "flex-layout.col#search"         
       ]
    },
    "flex-layout.col#filter": {
+      "children": [
+         "filter-navigator.v3"
+      ],
       "props": {
          "width": "20%"
       }
+   },
+   "flex-layout.col#search": {
+      "children": [
+         "search-content"
+      ]
    },
    "flex-layout.row#top": {
       "children": [
