--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -2,7 +2,7 @@
     "store.custom#about-us": {
         "blocks": [
             "flex-layout.row#about-us",
-            "tab-layout"
+            "tab-layout#home"
         ]
     },
     "flex-layout.row#about-us": {
@@ -16,8 +16,8 @@
         "rich-text#about-title",
         "rich-text#about-content"
       ],
-          "props": {
-        "preventVerticalStretch": true
+      "props": {
+          "preventVerticalStretch": true
       }
     },
    "rich-text#about-title": {
@@ -46,8 +46,7 @@
     },
     "tab-list.item#home1": {
         "props":{
-            "text":
-            "Major Appliances",
+            "text": "Major Appliances",
             "tabId" : "majorAppliances",
             "defaultActiveTab" : true
         }
