--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -2,7 +2,8 @@
     "store.custom#about-us": {
         "blocks": [
             "flex-layout.row#about-us",
-            "tab-layout#home"
+            "tab-layout#home",
+            "tab-content#home"
         ]
     },
     "flex-layout.row#about-us": {
@@ -53,8 +54,7 @@
     },
     "tab-list.item#home2": {
         "props":{
-            "text":
-            "Electronics",
+            "text": "Electronics",
             "tabId": "electronics"            
         }
     },
