--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -1,75 +1,93 @@
 {
-    "store.custom#about-us": {
-        "blocks": [
-            "flex-layout.row#about-us",
-            "tab-layout#home",
-            "tab-content#home"
-        ]
-    },
-    "flex-layout.row#about-us": {
-      "children": [
-        "image#about-us",
-        "flex-layout.col#text-about-us"
-      ]
-    },
-    "flex-layout.col#text-about-us": {
-      "children": [
-        "rich-text#about-title",
-        "rich-text#about-content"
-      ],
-      "props": {
-          "preventVerticalStretch": true
-      }
-    },
-   "rich-text#about-title": {
-      "props": {
-        "text":
-        "# Sobre a FlatFlat"
-      }
-    },
+  "store.custom#about-us": {
+    "blocks": [
+      "flex-layout.row#about-us",
+      "tab-layout#home",
+      "tab-content#home"
+    ]
+  },
+  "flex-layout.row#about-us": {
+    "children": [
+      "image#about-us",
+      "flex-layout.col#text-about-us"
+    ]
+  },
+  "flex-layout.col#text-about-us": {
+    "children": [
+      "rich-text#about-title",
+      "rich-text#about-content"
+    ],
+    "props": {
+      "preventVerticalStretch": true,
+      "textPosition": "right"
+    }
+  },
+  "rich-text#about-title": {
+    "props": {
+      "text": "# Sobre a FlatFlat"
+    }
+  },
     "rich-text#about-content": {
       "props": {
-        "text":
-        " FlatFlat é uma loja de eletro eletrônicos com muita tradição na fabricação de itens modernos e vintage. Nosso objetivo é criar eletrodomésticos que tornem as casas dos nossos clientes interessantes, independente do estilo. Com apenas 2 meses de história, já somos a loja com os produtos mais bonitos de toda a VTEX. Estamos construindo o nosso site nesse momento com o intuito de dar ao nosso cliente uma experiência memorável com a nossa marca!"
+        "text": " FlatFlat é uma loja de eletro eletrônicos com muita tradição na fabricação de itens modernos e vintage. Nosso objetivo é criar eletrodomésticos que tornem as casas dos nossos clientes interessantes, independente do estilo. Com apenas 2 meses de história, já somos a loja com os produtos mais bonitos de toda a VTEX. Estamos construindo o nosso site nesse momento com o intuito de dar ao nosso cliente uma experiência memorável com a nossa marca!"
       }
     },
-    "image#about-us": {
-      "props": {
-        "src": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-about-us.png",
-        "maxHeight": "600px"
-      }
-    },
-    "tab-layout#home": {
-        "children": [
-          "tab-list#home1",
-          "tab-content#home2"
-        ]
-    },
-    "tab-list.item#home1": {
-        "props":{
-            "text": "Major Appliances",
-            "tabId" : "majorAppliances",
-            "defaultActiveTab" : true
-        }
-    },
-    "tab-list.item#home2": {
-        "props":{
-            "text": "Electronics",
-            "tabId": "electronics"            
-        }
-    },
-    "tab-content#home": {
-        "children": [
-            "tab-content.item#home1",
-            "tab-content.item#home2"
-        ]
-    },
-    "tab-content.item#home": {
-        "children": [
-            "rich-text#home1",
-            "rich-text#home2"
-        ]
-    },
+  "image#about-us": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-about-us.png",
+      "maxHeight": "600px",
+      "horizontalAlign": "left"
+    }
+  },
+  "tab-layout#home": {
+    "children": [
+      "tab-list#home",
+      "tab-content#home"
+    ]
+  },
+  "tab-list.item#home": {
+    "children": [
+      "tab-list.item#home1",
+      "tab-list.item#home2"
+    ]
+  },
+
+  "tab-content#home": {
+    "children": [
+      "tab-content.item#home1",
+      "tab-content.item#home2"
+    ]
+  },
+  "tab-list.item#home1": {
+    "props":{
+      "tabId" : "majorAppliances",
+      "label": "Major Appliances",
+      "defaultActiveTab" : true
+    }
+  },
+  "tab-list.item#home2": {
+    "props":{
+      "tabId": "electronics",
+      "label": "Electronics"                  
+    }
+  },
+    
+  "tab-content.item#home1": {
+    "children": [
+      "rich-text#home1"        
+    ],
+    "props": {
+      "TabId": "majorAppliances"      
+    }
+  },
+  "tab-content.item#home2": {
+    "children": [
+      "rich-text#home2"
+    ], 
+    "props": {
+      "TabId": "electronics"      
+    }
+  },
     "rich-text#home1": {
         "props": {
           "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
