correção 5 tab-layout

--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -3,7 +3,8 @@
     "blocks": [
       "flex-layout.row#about-us",
       "tab-layout#home",
-      "tab-content#home"
+      "tab-content#home",
+      "tab-list.item#home"
     ]
   },
   "flex-layout.row#about-us": {
@@ -88,20 +89,18 @@
       "TabId": "electronics"      
     }
   },
-    "rich-text#home1": {
-        "props": {
-          "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
-          "textPosition": "CENTER",
-          "font": "t-heading-3"
-        }
-    },
-      "rich-text#home2": {
-        "props": {
-          "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-          "textPosition": "CENTER",
-          "font": "t-heading-3"
-        }
-    
+  "rich-text#home1": {
+    "props": {
+      "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
+      "textPosition": "CENTER",
+      "font": "t-heading-3"
     }
-
+  },
+  "rich-text#home2": {
+    "props": {
+      "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
+      "textPosition": "CENTER",
+      "font": "t-heading-3"
+    }    
+  }
 }
