--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -46,17 +46,10 @@
       "tab-content#home"
     ]
   },
-  "tab-list.item#home": {
+  "tab-list#home": {
     "children": [
       "tab-list.item#home1",
       "tab-list.item#home2"
-    ]
-  },
-
-  "tab-content#home": {
-    "children": [
-      "tab-content.item#home1",
-      "tab-content.item#home2"
     ]
   },
   "tab-list.item#home1": {
@@ -72,6 +65,14 @@
       "label": "Electronics"                  
     }
   },
+
+  "tab-content#home": {
+    "children": [
+      "tab-content.item#home1",
+      "tab-content.item#home2"
+    ]
+  },
+  
     
   "tab-content.item#home1": {
     "children": [
