--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -72,20 +72,15 @@
       "tab-content.item#home2"
     ]
   },
-  
-    
+      
   "tab-content.item#home1": {
-    "children": [
-      "rich-text#home1"        
-    ],
+    "children": ["rich-text#home1"],
     "props": {
       "TabId": "majorAppliances"      
     }
   },
   "tab-content.item#home2": {
-    "children": [
-      "rich-text#home2"
-    ], 
+    "children": ["rich-text#home2"], 
     "props": {
       "TabId": "electronics"      
     }
