--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -76,13 +76,13 @@
   "tab-content.item#home1": {
     "children": ["rich-text#home1"],
     "props": {
-      "TabId": "majorAppliances"      
+      "TabId": "electronics"      
     }
   },
   "tab-content.item#home2": {
-    "children": ["iframe"], 
+    "children": ["rich-text#home2"], 
     "props": {
-      "TabId": "electronics"      
+      "TabId": "majorAppliances"      
     }
   },
   "rich-text#home1": {
