--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -81,7 +81,7 @@
     }
   },
   "tab-content.item#home2": {
-    "children": ["iframe"], 
+    "children": ["rich-text#home2"], 
     "props": {
       "TabId": "electronics"      
     }
@@ -99,12 +99,6 @@
       "textPosition": "CENTER",
       "font": "t-heading-3"
     }    
-  },
-  "iframe": {
-    "props": {
-      "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
-      "width": 800,
-      "height": 1000
-    }
   }
+  
 }
