--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -2,7 +2,8 @@
   "store.custom#about-us": {
     "blocks": [
       "flex-layout.row#about-us",
-      "tab-layout#home"            
+      "tab-layout#home",
+      "tab-content#home"            
     ]
   },
   "flex-layout.row#about-us": {
@@ -73,19 +74,15 @@
   },  
       
   "tab-content.item#home1": {
-    "children": [
-      "rich-text#home1"
-    ],
+    "children": ["rich-text#home1"],
     "props": {
-      "TabId": "majorAppliances"      
+      "tabId": "majorAppliances"      
     }
   },
   "tab-content.item#home2": {
-    "children": [
-      "rich-text#home2"
-    ], 
+    "children": ["rich-text#home2"], 
     "props": {
-      "TabId": "electronics"      
+      "tabId": "electronics"      
     }
   },
   "rich-text#home1": {
