--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -5,7 +5,7 @@
         "search-result-layout.customQuery"
       ]
     },
-    "image#landing":{
+    "image#landingbanner":{
         "props": {
             "minWidth": "100%",
             "src": "https://user-images.githubusercontent.com/18701182/69890324-d1792b80-12d3-11ea-911d-194d2cb778c8.png"
