rev 02 search-landing.jsonc

--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -1,5 +1,5 @@
 {
-    "store.custom#Landing": { 
+    "store.custom#landing": { 
       "blocks": [
         "image#landingbanner", 
         "search-result-layout.customQuery"
@@ -8,7 +8,7 @@
     "image#landingbanner":{
         "props": {
             "minWidth": "100%",
-            "src": "https://user-images.githubusercontent.com/18701182/69890324-d1792b80-12d3-11ea-911d-194d2cb778c8.png"
+            "src": "https://www.instagram.com/p/B973Qp8BacC/embed"
         }
     },
     "search-result-layout.customQuery": {
