rev 03 search-landing.jsonc

--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -15,7 +15,7 @@
         "props": {
             "querySchema": {
                 "orderByField": "OrderByReleaseDateDESC",
-                "hideUnavaiLableItens": true,
+                "hideUnavaiLableItems": true,
                 "maxItensPerPage": 8,
                 "queryField": "Blue Top Retro Camera"
             }
