--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vtex.store-components": "3.x",
-    "vtex.product-summary": "2.x"
+    "vtex.product-summary": "2.x",
+    "vtex.search-result": "3.x"
   },
   "vtex.store": "2.x",
   "vtex.store-header": "2.x",
