rev 05 search-landing.jsonc

--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -14,12 +14,11 @@
     "search-result-layout.customQuery": {
         "props": {
             "querySchema": {
-                "queryField": "Blue Top Retro Camera",
+                "orderByField": "OrderByReleaseDateDESC",
                 "hideUnavaiLableItems": true,
                 "maxItemsPerPage": 8,
-                "orderByField": "OrderByReleaseDateDESC"           
-                
+                "queryField": "Blue Top Retro Camera"
             }
         }
     }
-  }
+}      
