rev 06 search-landing.jsonc

--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -15,7 +15,7 @@
         "props": {
             "querySchema": {
                 "orderByField": "OrderByReleaseDateDESC",
-                "hideUnavaiLableItems": true,
+                "hideUnavailableItems": true,
                 "maxItemsPerPage": 8,
                 "queryField": "Blue Top Retro Camera"
             }
