--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -1,18 +1,15 @@
 {
     "header-row#notification": {
         "children": [
-            "header-spacer",
+            "header-spacer",            
             "rich-text#header",
-            "header-spacer"
-        ]
-    },
-    "header.full": {
-        "blocks": [
-            "header-row#main-desktop",
+            "header-spacer",
+            "header-row#main",
             "header-row#main-mobile"
         ]
     },    
-    "header-row#main-desktop": {
+      
+    "header-row#main": {
         "children": [
             "logo",
             "header-spacer",
@@ -26,6 +23,36 @@
             "fullWidth": false
         }
     },
+    
+    "header": {
+        "blocks": [
+            "header-layout.desktop",
+            "header-layout.mobile"
+        ]
+    },
+
+    "header.full": {
+        "blocks": [
+            "header-layout.desktop",
+            "header-layout.mobile"
+        ]
+    },
+    
+    "header-layout.desktop": {
+        "children": [
+            "header-row#notification",
+            "header-row#main"
+        ]
+    },
+
+    "header-layout.mobile": {
+        "children": [
+            "header-row#notification",
+            "header-row#main-mobile",
+            "header-row#search"
+        ]
+    },
+
     "header-row#main-mobile": {
         "children": [
           "logo",
