--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -1,32 +1,24 @@
 {
-    "header.full": {
-        "blocks": [
-            "header-row#main-desktop",
-            "header-row#main-mobile"
-        ]
-    },
-    "header-row#main-desktop": {
-        "children": [
-            "header-row#notification",
-            "header-row#main"
-        ]
-    },
-
     "header-row#notification": {
         "children": [
             "header-spacer",            
             "rich-text#header",            
             "header-spacer",
             "header-row#main",
-            "header-row#main"
+            "header-row#main",
+            "header",
+            "header.full",
+            "header-row#search",
+            "header-layout.mobile",
+            "header-row#main-mobile"
         ]
-    },    
-      
+    },
+
     "header-row#main": {
         "children": [
             "logo",
-            "search-bar",
-            "header-spacer",            
+            "header-spacer", 
+            "search-bar",                       
             "minicart",
             "login"
         ],
@@ -36,7 +28,34 @@
             "fullWidth": false
         }
     },
+    "header": {
+        "blocks": [
+            "header-layout.desktop",
+            "header-layout.mobile"
+        ]
+    },
 
+    "header.full": {
+        "blocks": [
+            "header-layout.desktop",
+            "header-layout.mobile"
+        ]
+    },
+    "header-layout.desktop": {
+        "children": [
+            "header-row#notification",
+            "header-row#main"
+        ]
+    }, 
+
+    "header-layout.mobile": {
+        "children": [
+            "header-row#notification",
+            "header-row#main-mobile",
+            "header-row#search"
+        ]
+    },
+       
     "header-row#main-mobile": {
         "children": [
           "logo",
