add menu e drawer

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,9 @@
     "vtex.store-components": "3.x",
     "vtex.product-summary": "2.x",
     "vtex.search-result": "3.x",
-    "vtex.store-header": "2.x"
+    "vtex.store-header": "2.x",
+    "vtex.menu": "2.x",
+    "vtex.store-drawer": "0.x"
   },
   "vtex.store": "2.x",
   "vtex.store-header": "2.x",
