--- a/store/blocks/menu-items.jsonc
+++ b/store/blocks/menu-items.jsonc
@@ -1,32 +1,42 @@
 {
   "menu-item#major-appliances": {
-      "props": {
+    "blocks": [
+      "vtex.menu@2.x:submenu#major"
+    ],
+    "props": {
       "type": "custom",
       "highlight": true,
       "itemProps": {
         "text": "Major Aplliances"
       }
-    }
+    } 
   },
+  
   "menu-item#small-appliances": {
-      "props":
+    "blocks": [
+      "vtex.menu@2.x:submenu#small"
+    ],
+    "props":
     {
       "type": "category",
       "highlight": true,
       "itemProps": {
-        "categoryId": 2, 
+        "categoryId": 2,
         "text": "Small Appliances"
-      }
+      }   
     }
   },
   "menu-item#electronics": {
-      "props":
+    "blocks": [
+      "vtex.menu@2.x:submenu#electronics"
+    ],
+    "props": 
     {
       "type": "category",
       "highlight": true,
       "itemProps": {
-        "categoryId": 3, 
-        "text": "Electronics"
+      "categoryId": 3, 
+      "text": "Electronics"
       }
     }
   },
