rev 02 menu.jsonc

--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -17,13 +17,16 @@
     "vtex.menu@2.x:submenu#major": {
         "children": [
             "vtex.menu@2.x:menu#major"
-        ]
+        ],
+        "props": {
+            "orientation": "vertical"
+        }
     },
     "vtex.menu@2.x:menu#major": {
         "children": [
             "menu-item#refrigerators",
             "menu-item#ovens",
-            "menu-item#washers"
+            "menu-item#washers"            
         ],
         "props": {
             "width":"auto",
