--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -15,6 +15,18 @@
         }       
 
     },
+    
+    "vtex.menu@2.x:menu#major": {
+        "children": [
+            "menu-item#refrigerators",
+            "menu-item#ovens",
+            "menu-item#washers"            
+        ],
+        "props": {
+            "orientation": "vertical",
+            "width":"auto"
+        }
+    },
     "vtex.menu@2.x:submenu#major": {
         "children": [
             "vtex.menu@2.x:menu#major"
@@ -23,17 +35,7 @@
             "orientation": "vertical"
         }
     },
-    "vtex.menu@2.x:menu#major": {
-        "children": [
-            "menu-item#refrigerators",
-            "menu-item#ovens",
-            "menu-item#washers"            
-        ],
-        "props": {
-            "orientation": "horizontal",
-            "width":"auto"
-        }
-    },
+    
     "vtex.menu@2.x:submenu#small": {
         "children": [
             "vtex.menu@2.x:menu#small"
