rev 06 menu.jsonc

--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -11,22 +11,34 @@
     },
     "menu-item#major-appliances": {
         "props": {
-          "id": "menu-item-major-appliances"
-        }       
-
-    },
-    
+          "id": "menu-item-major-appliances",
+          "type": "custom",
+            "highlight": true,
+            "itemProps": {
+                "type": "internal",
+                "href": "#",
+                "noFollow": false,
+                "tagTitle": "Major Appliances",
+                "text": "Major Appliances"
+            }
+        },
+        "blocks": [
+            "vtex.menu@2.x:submenu#major"
+        ]
+    },    
     "vtex.menu@2.x:submenu#major": {
         "children": [
             "vtex.menu@2.x:menu#major"
-        ]        
+        ],
+        "props": {
+            "orientation": "vertical"   
+        }   
     },
-
     "vtex.menu@2.x:menu#major": {
         "children": [
             "menu-item#refrigerators",
             "menu-item#ovens",
-            "menu-item#washers"            
+            "menu-item#washers"          
         ],
         "props": {
             "orientation": "vertical",
