--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     "vtex.search-result": "3.x",
     "vtex.store-header": "2.x",
     "vtex.menu": "2.x",
-    "vtex.store-drawer": "0.x"
+    "vtex.store-drawer": "0.x",
+    "vtex.store-footer": "2.x"
   },
   "vtex.store": "2.x",
   "vtex.store-header": "2.x",
