--- a/store/blocks/footer.jsonc
+++ b/store/blocks/footer.jsonc
@@ -1,12 +1,20 @@
 {
     "footer": {
-      "blocks": ["footer-layout.desktop"]
+      "blocks": [
+          "footer-layout.desktop",
+          "footer-layout.mobile"
+        ]
     },
     "footer-layout.desktop": {
       "children": [
         "flex-layout.row#footer-1-desktop"
       ]
     },
+    "footer-layout.mobile": {
+        "children": [
+          "flex-layout.row#footer-1-mobile"
+        ]
+      },
     "flex-layout.row#footer-1-desktop": {
         "children": [
           "flex-layout.col#footer-left-desktop",
@@ -23,21 +31,27 @@
           "accepted-payment-methods"          
         ]
     },
+    "accepted-payment-methods": {
+        "props": {            
+            "paymentMethods": [ "Mastercard", "Visa", "Diners Club"],
+            "showIncolor": "true"
+        }
+    },
+    "flex-layout.col#footer-left-mobile": {
+        "children": [
+          "accepted-payment-methods"          
+        ]
+    },
     "flex-layout.col#footer-right-desktop": {
         "children": [
           "social-networks"          
         ]
     },
-    "accepted-payment-methods": {
-        "props": {
-            "showIncolor": "true",
-            "paymentMethods": [
-                "mastercard",
-                "visa",
-                "diners club"
-            ]
-        }
-    },
+    "flex-layout.col#footer-right-mobile": {
+        "children": [
+          "social-networks"          
+        ]
+    },    
     "social-networks": {
         "props": {
             "showIncolor": "true",
