--- a/store/blocks/footer.jsonc
+++ b/store/blocks/footer.jsonc
@@ -44,7 +44,11 @@
     
     "accepted-payment-methods": {
         "props": {            
-            "paymentMethods": [ "Mastercard", "Visa", "Diners Club"],
+            "paymentMethods": [
+                "Mastercard",
+                "Visa", 
+                "Diners Club"
+            ],
             "showIncolor": "true"
         }
     },    
